--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>Web based Serial Terminal for CDC2I2C/WEB2I2C/UK524/UK523/UK534/UK827... </title>
+<title>Web based Serial Terminal for UK524-CDC2I2C/UK527-WEB2I2C </title>
 <!--
   term.js
   Copyright (c) 2012-2013, Christopher Jeffrey (MIT License)
@@ -15,7 +15,7 @@
 
 <div style="display:inline-block; vertical-align:top;">
 
-<b>Web Serial Terminal for CDC2I2C/WEB2I2C/UK524/UK523/UK534/UK827... </b>
+<b>Web Serial Terminal for UK524-CDC2I2C/UK527-WEB2I2C </b>
 <br>
 
 Serial port speed: 
