--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>WebSerialTermial for UK524/7-CDC2I2C and UK527-WEB2I2C </title>
+<title>WebSerialTermial for UK524-CDC2I2C, UK527-WEB2I2C and UK529-USB2WST </title>
 <!--
   term.js
   Copyright (c) 2012-2013, Christopher Jeffrey (MIT License)
