--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-<title>WebSerialTermial for UK524-CDC2I2C, UK527-WEB2I2C and UK529-USB2WST </title>
+<title>Web Serial Terminal for UK524-CDC2I2C, UK527-WEB2I2C and UK529-USB2WST </title>
 <!--
   term.js
   Copyright (c) 2012-2013, Christopher Jeffrey (MIT License)
@@ -15,19 +15,19 @@
 
 <div style="display:inline-block; vertical-align:top;">
 
-<b>Web Serial Terminal for UK524-CDC2I2C/UK527-WEB2I2C </b>
+<b>Web Serial Terminal for UK524-CDC2I2C, UK527-WEB2I2C and UK529-USB2WST </b>
 <br>
 
 Serial port speed: 
 <select name="speed" id="SerialSpeed">
   <option value="500000">500000</option>
   <option value="1000000">1000000</option>
-  <option value="2000000">2000000</option>
-  <option value="9600">9600</option>
-  <option value="19200">19200</option>
   <option value="115200">115200</option>
   <option value="230400">230400</option>
   <option value="460800">460800</option>
+  <option value="9600">9600</option>
+  <option value="19200">19200</option>
+  <option value="2000000">2000000</option>
 </select>
 <button id="SerialConnectButton" type="button" disabled>Connect</button>
 
@@ -36,7 +36,7 @@ Serial port speed:
 
 </div>
 
-<p> Use Ctrl+A+C to copy and Ctrl+A+V to paste</p>
+<p> Use Ctrl+A+C to copy and Ctrl+A+V to paste.	OpenSource Hardware at https://oshwhub.com/openiic 	</p>
 <p> Source code: <a href=https://github.com/rafaelaroca/web-serial-terminal>https://github.com/rafaelaroca/web-serial-terminal</a> </p>
 
 <p> This page can be used offline. Simply download it as <a href=https://github.com/rafaelaroca/web-serial-terminal/archive/refs/heads/master.zip>ZIP file</a>, unzip and open index.html on your browser (Google Chrome or MS-Edge). Firefox still not supported.</p>
