Update links and improve text in index.html

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div style="display:inline-block; vertical-align:top;">
 
-<b>Web Serial Terminal for UK524-CDC2I2C, UK527-WEB2I2C and UK529-USB2WST </b>
+<b>Web Serial Terminal for UK524-CDC2I2C, UK527-WEB2I2C and UK529-USB2WST... </b>
 <br>
 
 Serial port speed: 
@@ -36,8 +36,9 @@ Serial port speed:
 
 </div>
 
-<p> Use Ctrl+A+C to copy and Ctrl+A+V to paste.	OpenSource Hardware at https://oshwhub.com/openiic 	</p>
+<p> Use Ctrl+A+C to copy and Ctrl+A+V to paste.	OpenSource Hardware at: <a href=https://oshwhub.com/openiic>https://oshwhub.com/openiic</a> </p>
 <p> Source code: <a href=https://github.com/rafaelaroca/web-serial-terminal>https://github.com/rafaelaroca/web-serial-terminal</a> </p>
+<p> Source code: <a href=https://github.com/pythoniot/WebSerial>https://github.com/pythoniot/WebSerial</a> </p>
 
 <p> This page can be used offline. Simply download it as <a href=https://github.com/rafaelaroca/web-serial-terminal/archive/refs/heads/master.zip>ZIP file</a>, unzip and open index.html on your browser (Google Chrome or MS-Edge). Firefox still not supported.</p>
 
